# warehousebot_simulation

./: CMakeLists.txt  README.md  package.xml
include/realsense_gazebo_plugin/: gazebo_ros_realsense.h
launch/: bot_description.py  robot_state_publisher.launch.py  simulation_launch.py  spawn_bot.launch.py
meshes/: bot_chassis.stl  left_wheel.stl  right_wheel.stl
meshes/dmro_lab/: model.config  model.sdf
rviz/: sim_nav.rviz  view_warehousebot.rviz  warehousebot_sim.rviz
src/: gazebo_ros_realsense.cpp
urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  supertest.sdf  supertest.urdf  supertest.urdf.xacro  warehouse_bot_sim.gazebo.xacro  warehouse_bot_sim.sdf  warehouse_bot_sim.urdf  warehouse_bot_sim.urdf.xacro
worlds/: dmro.world
