<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehousebot_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="roald.ong@gmail.com">kimochiusagi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>


  <exec_depend>libpcl-common</exec_depend>
  <exec_depend>libpcl-features</exec_depend>
  <exec_depend>libpcl-filters</exec_depend>
  <exec_depend>libpcl-io</exec_depend>
  <exec_depend>libpcl-segmentation</exec_depend>
  <exec_depend>libpcl-surface</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>libpcl-all-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
